# python-introspection

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
python_introspection/: __init__.py  __main__.py  _cli.py
python_introspection/scripts/: generate-build-details.py
