[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'python-instrospection'
authors = [{name = 'Filipe Laíns', email = 'lains@riseup.net'}]
license = {file = 'LICENSE'}
classifiers = ['License :: OSI Approved :: MIT License']
dynamic = ['version', 'description']

[project.urls]
Home = 'https://github.com/FFY00/python-instrospection'
